# fantasim-world

./: .editorconfig  .gitignore  .markdownlintignore  .pre-commit-config.yaml  .secrets.baseline  2026-02-04-local-command-caveatcaveat-the-messages-below-w-002.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GitVersion.yml  LICENSE  README.md  SECURITY.md  Taskfile.yml  arch.binlog  build_output.txt  build_output_10.txt  build_output_11.txt  build_output_12.txt  build_output_13.txt  build_output_2.txt  build_output_3.txt  build_output_4.txt  build_output_5.txt  build_output_6.txt  build_output_7.txt  build_output_8.txt  build_output_9.txt  build_output_refactor_01.txt  build_output_refactor_02.txt  build_output_refactor_03.txt  build_output_refactor_04.txt  codecov.yml  lint_error.txt  lint_report.txt  models.json  opencode.json  pyproject.toml  (+2 more)
.config/: dotnet-tools.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.nuke/: build.schema.json
.opencode/: package.json
docs/: ADOPTION_PLAN.md  GRAPH-SUBSTRATE-DOCTRINE.md  PLUGIN-HOT-RELOAD-DOCTRINE.md  PROGRESS-002-UNIFY-GEOMETRY.md  SOLVERLAB.md
project/: .editorconfig  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  FantaSim.World.sln  FantaSim.World.sln.DotSettings
scripts/: README-cleanup-inbox.md  README.md  analyze_inbox_duplicates.py  cleanup_inbox.py  combine_cs.py  fix_fantasim_shared.py  generate-dtos.ps1  merge_duplicates.py  organize_docs.py  organize_inbox.py  spec_worktree.ps1  sync_commands.py  sync_opencode.py  sync_rules.py  sync_skills.py  (+1 more)
(+1198 files in other folders)
